--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/VladimirKovalenko1986/nadoedalka/issues"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
